# GameLauncher

./: .gitignore  .gitmodules  GameLauncher.sln  LICENSE.txt  README.md  appveyor.yml
GameLauncher/: GameLauncher.csproj  GameLauncher.vcxproj  Program.cs
GameLauncher/src/back/: Platform.cpp  main.cpp
GameLauncher/src/front/: index.html
Legacy/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml
Legacy/cmake/: CompileDefs.cmake  LinkDefs.cmake  PreprocessorDefs.cmake
Legacy/src/back/: Config.hpp  Downloader.hpp  GUI.hpp  Platform.hpp  Version.hpp
Legacy/src/front/: config.json
Legacy/test_data/install/: version.json
test_data/: design.txt
test_data/updates/: version.json
